force-app/main/default/objects/Utility__c/Utility__c.object-meta.xml
<CustomObject>
    <label>Utility</label>
    <nameField>
        
        <label>Utility Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Utilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>