force-app/main/default/objects/Utility__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account associated to this utitliy. This is where utility contacts and communications can be tracked.</inlineHelpText>
    <label>Utility Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Utilities</relationshipLabel>
    <relationshipName>Utilities</relationshipName>
    <type>Lookup</type>
</CustomField>