force-app/main/default/objects/Utility__c/fields/Auto_QC_Maximum_Demand__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Maximum_Demand__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Maximum Demand (kW) permitted for a UAL under this utility to be marked as &apos;Complete&apos; by Auto-QC</description>
    <inlineHelpText>Maximum Demand (kW) permitted for a UAL under this utility to be marked as &apos;Complete&apos; by Auto-QC</inlineHelpText>
    <label>Auto QC Maximum Demand</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>