force-app/main/default/objects/Utility__c/fields/Auto_QC_Minimum_kWH__c.field-meta.xml
<CustomField>
    <fullName>Auto_QC_Minimum_kWH__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Minimum Annual kWH permitted for a UAL under this utility to be marked as &apos;Complete&apos; by Auto-QC</description>
    <inlineHelpText>Minimum Annual kWH permitted for a UAL under this utility to be marked as &apos;Complete&apos; by Auto-QC</inlineHelpText>
    <label>Auto QC Minimum Annual kWH</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>