force-app/main/default/objects/Utility__c/fields/Auto_Qualify_Convert_Active__c.field-meta.xml
<CustomField>
    <fullName>Auto_Qualify_Convert_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>See CSLeadsConverter.cls</description>
    <inlineHelpText>Indicates if Leads should undergo automatic Qualification &amp; Conversion when all Utility Account Logs for that Lead have been marked QC Status as &apos;Complete&apos;</inlineHelpText>
    <label>Auto Qualify &amp; Convert Active</label>
    <type>Checkbox</type>
</CustomField>