force-app/main/default/objects/Utility__c/fields/Average_Demand_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Average_Demand_Threshold__c</fullName>
    <defaultValue>25.00</defaultValue>
    <description>Average Demand (kW DC) at which a subscription is considered a &quot;Demand Subscription&quot; (used to identify Demand capacity limits on Projects)</description>
    <inlineHelpText>Average Demand (kW DC) at which a subscription is considered a &quot;Demand Subscription&quot; (used to identify Demand capacity limits on Projects)</inlineHelpText>
    <label>Average Demand Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>