force-app/main/default/objects/Utility__c/fields/Collect_Customer_POD_Number__c.field-meta.xml
<CustomField>
    <fullName>Collect_Customer_POD_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, we collect the customer PoD ID in SSF. Some utilities use this number to lookup EDI data</inlineHelpText>
    <label>Collect Customer PoD ID</label>
    <type>Checkbox</type>
</CustomField>