force-app/main/default/objects/Utility__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Information that is specific to this Utility.</description>
    <inlineHelpText>Information that is specific to this Utility.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>