force-app/main/default/objects/Utility__c/fields/Credits_Allocated_Rounding_Method__c.field-meta.xml
<CustomField>
    <fullName>Credits_Allocated_Rounding_Method__c</fullName>
    <inlineHelpText>Credits Allocated = Share of System * Total System NMCs, rounded using this method. https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_methods_system_decimal.htm</inlineHelpText>
    <label>Credits Allocated: Rounding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Methods</valueSetName>
    </valueSet>
</CustomField>