force-app/main/default/objects/Utility__c/fields/Dual_Data__c.field-meta.xml
<CustomField>
    <fullName>Dual_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the client requires both the POD and the account number for the EDI request.</description>
    <inlineHelpText>When checked, both the POD and the account  number of the utility must be transferred to the client.</inlineHelpText>
    <label>Send account number and POD ID for EDI</label>
    <type>Checkbox</type>
</CustomField>