force-app/main/default/objects/Utility__c/fields/EDI_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>EDI_Name_Override__c</fullName>
    <inlineHelpText>Override field for the Utility Name that is sent in outbound EDI requests</inlineHelpText>
    <label>EDI Name Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>