force-app/main/default/objects/Utility__c/fields/EIA_ID__c.field-meta.xml
<CustomField>
    <fullName>EIA_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the EIA ID that Originations provides</inlineHelpText>
    <label>EIA ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>