force-app/main/default/objects/Utility__c/fields/Expect_Unsubscribed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Expect_Unsubscribed_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is set to true, the Transfer Data Entry Flow will direct the user to create unsubscribed transfer records</description>
    <inlineHelpText>When this field is set to true, the Transfer Data Entry Flow will direct the user to create unsubscribed transfer records</inlineHelpText>
    <label>Expect Unsubscribed Credits</label>
    <type>Checkbox</type>
</CustomField>