force-app/main/default/objects/Utility__c/fields/Host_Account_Bill_Transfer_Month__c.field-meta.xml
<CustomField>
    <fullName>Host_Account_Bill_Transfer_Month__c</fullName>
    <description>This field controls whether the Previous or Current month&apos;s transfer record is used in the Transfer Data Entry Flow</description>
    <inlineHelpText>This field controls whether the Previous or Current month&apos;s transfer record is used in the Transfer Data Entry Flow</inlineHelpText>
    <label>Host Account Bill Transfer Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>