force-app/main/default/objects/Utility__c/fields/Number_of_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Decimal_Places__c</fullName>
    <inlineHelpText>Used for calculating kW subscriptions for SOs</inlineHelpText>
    <label>Number of Decimal Places</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>