force-app/main/default/objects/Utility__c/fields/POD_Id_Format__c.field-meta.xml
<CustomField>
    <fullName>POD_Id_Format__c</fullName>
    <inlineHelpText>The PoD Id format. Places groups of numbers in the desired format and uses regex capture groups as placeholders. Include prefix if applicable. Ex: for PoD Ids formatted XXX-XXX-XX the POD Id Format value is $1-$2-$3., for PoD Ids with the prefix R01 and formatted R01-XXX-XXX the POD Id Format value is R01-$1-$2.</inlineHelpText>
    <label>POD Id Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>