force-app/main/default/objects/Utility__c/fields/POD_Id_Length__c.field-meta.xml
<CustomField>
    <fullName>POD_Id_Length__c</fullName>
    <inlineHelpText>Length of POD Ids. Ex: if POD Ids are written XXXX-XX-XX the length is 8. Prefixes are included in length. Ex: R01-XXXX-XXXX is length 11.</inlineHelpText>
    <label>POD Id Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>