force-app/main/default/objects/Utility__c/fields/POD_Id_Prefix__c.field-meta.xml
<CustomField>
    <fullName>POD_Id_Prefix__c</fullName>
    <inlineHelpText>Used for automatically adding the POD Id prefix on forms.</inlineHelpText>
    <label>POD Id Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>