force-app/main/default/objects/Utility__c/fields/POD_Id_Regex_Groups__c.field-meta.xml
<CustomField>
    <fullName>POD_Id_Regex_Groups__c</fullName>
    <inlineHelpText>Regex for breaking utility account numbers into capture groups for formatting. Ex: to format a POD Id as XX-XXXX-XXXX-XXXX-X use the regex (\d{0,2})(\d{0,4})(\d{0,4})(\d{0,4})(\d?). Delimiters are captured in the POD Id Regex Delimiter field.</inlineHelpText>
    <label>POD Id Regex Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>