force-app/main/default/objects/Utility__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <inlineHelpText>Select the Territory(s) to which the data below will represent.</inlineHelpText>
    <label>XXService Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duke Energy Progress (DEP)</fullName>
            </value>
            <value>
                <fullName>Duke Energy Carolinas (DEC)</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>