force-app/main/default/objects/Utility__c/fields/Supplier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Number__c</fullName>
    <inlineHelpText>This is used in the EDI integration. It is a number that is assigned to Perch by each utility. It is not required for all utilities.</inlineHelpText>
    <label>Supplier Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>