force-app/main/default/objects/Utility__c/fields/Transfer_Mismatch_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Mismatch_Tolerance__c</fullName>
    <description>The dollar variance allowed in the transfer sheet QC to still produce a Match</description>
    <inlineHelpText>The dollar variance allowed in the transfer sheet QC to still produce a Match</inlineHelpText>
    <label>Transfer Mismatch Tolerance</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>