force-app/main/default/objects/Utility__c/fields/UASB_Number_of_Decimals__c.field-meta.xml
<CustomField>
    <fullName>UASB_Number_of_Decimals__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Number of Decimals to round the kWh subscription when calculating UASBs</inlineHelpText>
    <label>UASB: Number of Decimals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>