force-app/main/default/objects/Utility__c/fields/Use_Glynt__c.field-meta.xml
<CustomField>
    <fullName>Use_Glynt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Utility Data Requests associated with Utility Account Logs with an attached bill for this utility will be sent to Glynt for data extraction. Utility Data Collection Mechanism must be &quot;File Upload&quot;</inlineHelpText>
    <label>Use Glynt</label>
    <type>Checkbox</type>
</CustomField>