force-app/main/default/objects/Utility__c/fields/Use_Premise_Number_In_Transfer_QC__c.field-meta.xml
<CustomField>
    <fullName>Use_Premise_Number_In_Transfer_QC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From W-022040, modifies the Transfer Sheet QC process to match accounts by Premise Number instead of Utility Account Number</description>
    <inlineHelpText>Check this if the Transfer Sheet QC screen should match entries in the Transfer Sheet by the Premise (PoD Id) number instead of the Utility Account Number</inlineHelpText>
    <label>Use Premise Number In Transfer QC</label>
    <type>Checkbox</type>
</CustomField>