force-app/main/default/objects/Utility__c/fields/Utility_Account_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number_Format__c</fullName>
    <inlineHelpText>The utility account number format. Places groups of numbers in the desired format and uses regex capture groups as placeholders. Include prefix if applicable. Ex: for UANs formatted XXX-XXX-XX the UAN Format value is $1-$2-$3. for UANs with prefix R01 and formatted R01-XXX-XXX the UAN Format value is R01-$1-$2.</inlineHelpText>
    <label>UAN Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>