force-app/main/default/objects/Utility__c/fields/Utility_Account_Number_Length__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number_Length__c</fullName>
    <inlineHelpText>Length of utility account numbers. Ex: if UANs are written XXXX-XX-XX the length is 8. Prefixes are included in length. Ex: R01-XXXX-XXXX is length 11.</inlineHelpText>
    <label>UAN Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>