force-app/main/default/objects/Utility__c/fields/Utility_Account_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number_Prefix__c</fullName>
    <inlineHelpText>Used for automatically adding the utility account number prefix on forms.</inlineHelpText>
    <label>UAN Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>