force-app/main/default/objects/Utility__c/fields/Utility_Account_Number_Regex_Groups__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number_Regex_Groups__c</fullName>
    <inlineHelpText>Regex for breaking utility account numbers into capture groups for formatting. Ex: to format a utility account number as XX-XXXX-XXXX-XXXX-X use the regex (\d{0,2})(\d{0,4})(\d{0,4})(\d{0,4})(\d?). Delimiters are captured in the UAN Regex Delimiter field.</inlineHelpText>
    <label>UAN Regex Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>