force-app/main/default/objects/Utility__c/fields/Utility_Data_Collection_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Utility_Data_Collection_Mechanism__c</fullName>
    <label>Utility Data Collection Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>File Upload</fullName>
                
                    <default>true</default>
                
                    <label>File Upload</label>
                
                </value>
            
                <value>
                
                    <fullName>EDI</fullName>
                
                
                    <label>EDI</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>