force-app/main/default/objects/Utility__c/fields/Utility_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_DUNS_Number__c</fullName>
    <inlineHelpText>Used in the EDI integration as unique identifier for utilities</inlineHelpText>
    <label>Utility DUNS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>