force-app/main/default/objects/Utility__c/validationRules/Collect_POD_ID_Checked_For_Dual_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Collect_POD_ID_Checked_For_Dual_Data</fullName>
    <active>true</active>
    <description>Collect Customer POD ID must be checked every time both the account number and POD ID have to be sent.</description>
    <errorConditionFormula>IF(Dual_Data__c, 
    NOT(Collect_Customer_POD_Number__c), 
    FALSE)</errorConditionFormula>
    <errorMessage>Collect Customer POD Number should be checked every time both the account number and POD Number are to be sent.</errorMessage>
</ValidationRule>