force-app/main/default/objects/Utility__c/validationRules/Lock_Number_of_Decimals.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Number_of_Decimals</fullName>
    <active>true</active>
    <description>This prevents changes to the # of decimals field. It&apos;s needed because if the # of decimals changes, we&apos;d need to log subscription orders for all UASs under that utility.</description>
    <errorConditionFormula>AND(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
ISCHANGED(Number_of_Decimal_Places__c)=true,
ISNULL(PRIORVALUE(Number_of_Decimal_Places__c))=false
)</errorConditionFormula>
    <errorDisplayField>Number_of_Decimal_Places__c</errorDisplayField>
    <errorMessage>The number of decimal places on a utility cannot be changed once set. Please contact Business Applications if this needs to be changed. This is a safety measure to ensure that the appropriate subscription orders are created.</errorMessage>
</ValidationRule>